--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	//JSP 추가 시작
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'javax.servlet:jstl'
+	implementation 'jakarta.servlet:jstl'
 	//JSP 추가 끝
 
 	compileOnly 'org.projectlombok:lombok'
