--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,9 @@ dependencies {
 
 	//JSP 추가 시작
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'javax.servlet:jstl'
-	implementation 'jakarta.servlet:jstl'
+	/*implementation 'javax.servlet:jstl'
+	implementation 'jakarta.servlet:jstl'*/
+	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
 	//JSP 추가 끝
 
 	compileOnly 'org.projectlombok:lombok'
